--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/cookie": "^0.4.1",
+    "@types/cors": "^2.8.12",
+    "cookie": "^0.4.1",
+    "cors": "^2.8.5",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
