--- a/package.json
+++ b/package.json
@@ -9,18 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@types/cookie": "^0.4.1",
     "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "cookie": "^0.4.1",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-copy-to-clipboard": "^5.0.4",
+    "react-dom": "17.0.2",
+    "simple-peer": "^9.11.0",
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0",
+    "video.js": "^7.14.3",
+    "videojs-youtube": "^2.6.1"
   },
   "devDependencies": {
+    "@types/node": "^16.9.1",
     "@types/react": "17.0.20",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "nodemon": "^2.0.12",
+    "ts-node": "^10.2.1",
     "typescript": "4.4.3"
   }
 }
