--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/node": "^16.9.1",
     "@types/react": "17.0.20",
+    "@types/simple-peer": "^9.11.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "nodemon": "^2.0.12",
