--- a/package.json
+++ b/package.json
@@ -10,18 +10,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/button": "^1.4.2",
+    "@chakra-ui/react": "^1.6.7",
+    "@chakra-ui/system": "^1.7.3",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@types/cookie": "^0.4.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@walletconnect/web3-provider": "^1.6.5",
     "cookie": "^0.4.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "framer-motion": "^4",
+    "moralis": "^0.0.50",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
+    "react-moralis": "^0.2.3",
     "simple-peer": "^9.11.0",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.2.0",
